--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					const botToken = '5975737743:AAFxFhwL8_VIvZRkqXYeDVngTH3zXaqhy68'; // 替换为您的Telegram Bot的API令牌
 					const chatId = '5957163999'; // 替换为您的Telegram聊天ID
 
-					const apiUrl = `https://api.telegram.org/bot${botToken}/sendMessage`;
+					const apiUrl = `https://ymy.gay/https://api.telegram.org/bot${botToken}/sendMessage`;
 					const requestOptions = {
 						method: 'POST',
 						headers: {
