--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 				try {
 					const data = await fetchIPData(API_URL);
 					if (data) {
-						const message = await createMessage(data);
-						await pushToTelegram(message);
+						// 查询IP的具体位置
+						const ipDetails = await fetchIPDetails(data.ip);
+						if (ipDetails) {
+							const message = await createMessage(data, ipDetails);
+							await pushToTelegram(message);
+						}
 					}
 				} catch (error) {
 					console.error('发生错误：', error);
@@ -43,27 +47,24 @@
 				return null;
 			}
 
-			async function createMessage(data) {
+			async function createMessage(data, ipDetails) {
 				const currentTime = new Date();
 				const formattedTime = currentTime.toLocaleString(); // 格式化时间
 
 				return `
-当前时间: ${formattedTime} 
-
 IP 地址: ${data.ip}
+
+具体位置: ${ipDetails.ipdata.info1} ${ipDetails.ipdata.info2} ${ipDetails.ipdata.info3}
 组织名称: ${data.organization}
 经度: ${data.longitude}
-区域: ${data.region}
-城市: ${data.city}
 时区: ${data.timezone}
-ISP: ${data.isp}
 偏移量: ${data.offset}
 国家: ${data.country}
 纬度: ${data.latitude}
 大洲代码: ${data.continent_code}
 国家代码: ${data.country_code}
-区域代码: ${data.region_code}
-                `;
+当前时间: ${formattedTime}
+`;
 			}
 
 			async function pushToTelegram(message) {
@@ -87,6 +88,20 @@ ISP: ${data.isp}
 					}
 				} catch (error) {
 					console.error('推送到 Telegram 时发生错误：', error);
+				}
+			}
+
+			async function fetchIPDetails(ip) {
+				try {
+					const response = await fetch(`https://api.vore.top/api/IPdata?ip=${ip}`);
+					if (response.ok) {
+						return await response.json();
+					}
+					console.error('获取IP详情时发生错误');
+					return null;
+				} catch (error) {
+					console.error('获取IP详情时发生错误：', error);
+					return null;
 				}
 			}
 
