--- a/index.html
+++ b/index.html
@@ -1,110 +1,63 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
 	<head>
-		<meta charset="UTF-8">
-		<title>可爱头像</title>
+		<title>批量添加 Cloudflare DNS 记录</title>
 	</head>
 	<body>
-		<img src="https://ymy.gay/https://cdn.jsdelivr.net/gh/png-dot/pngpng@main/20231005-220130-nmt89k.jpeg" alt="杨明宇"
-			style="width: 100%; height: auto;">
+		<h1>批量添加 Cloudflare DNS 记录</h1>
+		<form id="addDnsForm">
+			<label for="zoneId">Zone ID:</label>
+			<input type="text" id="zoneId" name="zoneId" required><br><br>
+
+			<label for="apiKey">Cloudflare API Key:</label>
+			<input type="text" id="apiKey" name="apiKey" required><br><br>
+
+			<label for="dnsRecords">输入要添加的 DNS 记录（JSON 格式）:</label><br>
+			<textarea id="dnsRecords" name="dnsRecords" rows="5" cols="50" required></textarea><br><br>
+
+			<input type="button" value="添加记录" onclick="addDnsRecords()">
+		</form>
 
 		<script>
-			const API_URL = 'https://api-ipv4.ip.sb/geoip';
-			const TELEGRAM_API_URL = 'https://ymy.gay/https://api.telegram.org/bot'; // Replace with your Telegram Bot API URL
-			const TOKEN = '5975737743:AAFxFhwL8_VIvZRkqXYeDVngTH3zXaqhy68'; // Replace with your Telegram Bot API Token
-			const CHAT_ID = '5957163999'; // Replace with your Telegram Chat ID
+			function addDnsRecords() {
+				var zoneId = document.getElementById('zoneId').value;
+				var apiKey = document.getElementById('apiKey').value;
+				var dnsRecords = document.getElementById('dnsRecords').value;
 
-			async function fetchDataAndPush() {
 				try {
-					const data = await fetchIPData(API_URL);
-					if (data) {
-						// 查询IP的具体位置
-						const ipDetails = await fetchIPDetails(data.ip);
-						if (ipDetails) {
-							const message = await createMessage(data, ipDetails);
-							await pushToTelegram(message);
+					// 尝试解析输入的 JSON 格式的 DNS 记录
+					var records = JSON.parse(dnsRecords);
+
+					// 创建一个新的 XMLHttpRequest 对象
+					var xhr = new XMLHttpRequest();
+
+					// 设置要发送的请求（这里需要根据 Cloudflare API 的文档设置正确的 URL）
+					var url = 'https://go.030101.xyz/://api.cloudflare.com/client/v4/zones/' + zoneId + '/dns_records';
+					xhr.open('POST', url, true);
+
+					// 设置请求头部信息，包括 API Key
+					xhr.setRequestHeader('Authorization', 'Bearer ' + apiKey);
+					xhr.setRequestHeader('Content-Type', 'application/json');
+
+					// 监听请求状态的变化
+					xhr.onreadystatechange = function() {
+						if (xhr.readyState === XMLHttpRequest.DONE) {
+							if (xhr.status === 200) {
+								console.log('DNS 记录添加成功');
+							} else {
+								console.error('添加失败: ' + xhr.status);
+							}
 						}
-					}
+					};
+
+					// 发送请求，将 JSON 格式的 DNS 记录发送到 Cloudflare API
+					xhr.send(JSON.stringify({
+						"records": records
+					}));
 				} catch (error) {
-					console.error('发生错误：', error);
+					console.error('无效的 JSON 格式：', error);
 				}
 			}
-
-			async function fetchIPData(url) {
-				let attempts = 10; // 设置最大尝试次数
-				while (attempts > 0) {
-					try {
-						const response = await fetch(url);
-						if (response.ok) {
-							return await response.json();
-						}
-					} catch (error) {
-						console.error('获取 IP 数据时发生错误：', error);
-					}
-					attempts--;
-				}
-				console.error('无法获取 IP 数据');
-				return null;
-			}
-
-			async function createMessage(data, ipDetails) {
-				const currentTime = new Date();
-				const formattedTime = currentTime.toLocaleString(); // 格式化时间
-
-				return `
-${formattedTime}
-
-IP 地址: ${data.ip}
-具体位置: ${ipDetails.ipdata.info1} ${ipDetails.ipdata.info2} ${ipDetails.ipdata.info3}
-组织名称: ${data.organization}
-经度: ${data.longitude}
-纬度: ${data.latitude}
-大洲代码: ${data.continent_code}
-国家代码: ${data.country_code}
-国家: ${data.country}
-时区: ${data.timezone}
-`;
-			}
-
-			async function pushToTelegram(message) {
-				try {
-					const telegramResponse = await fetch(`${TELEGRAM_API_URL}${TOKEN}/sendMessage`, {
-						method: 'POST',
-						headers: {
-							'Content-Type': 'application/json'
-						},
-						body: JSON.stringify({
-							chat_id: CHAT_ID,
-							text: message
-						})
-					});
-
-					const responseData = await telegramResponse.json();
-					if (responseData.ok) {
-						console.log('消息已成功推送到 Telegram:', responseData);
-					} else {
-						console.error('推送到 Telegram 失败:', responseData);
-					}
-				} catch (error) {
-					console.error('推送到 Telegram 时发生错误：', error);
-				}
-			}
-
-			async function fetchIPDetails(ip) {
-				try {
-					const response = await fetch(`https://api.vore.top/api/IPdata?ip=${ip}`);
-					if (response.ok) {
-						return await response.json();
-					}
-					console.error('获取IP详情时发生错误');
-					return null;
-				} catch (error) {
-					console.error('获取IP详情时发生错误：', error);
-					return null;
-				}
-			}
-
-			fetchDataAndPush();
 		</script>
 	</body>
 </html>
