--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 		<title>test</title>
 	</head>
 	<frameset framespacing="0" border="0" rows="0" frameborder="0">
-		<frame name="main" src="https://www.nodeseek.com/" scrolling="auto" noresize>
+		<frame name="main" src="https://erp.86899.xyz" scrolling="auto" noresize>
 	</frameset>
 </html>
