--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 		<title>Baby Yi</title>
-		<link rel="stylesheet" href="1.css">
+		<link rel="stylesheet" href="css.css">
 	</head>
 	<body>
 		<div id="container">
