--- a/index.html
+++ b/index.html
@@ -1,164 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-	<head>
-		<meta charset="UTF-8">
-
-		<!-- 网页图标 -->
-		<link rel="icon" sizes="120x120" href="https://im.030101.xyz/file/281e5d88a61ee24e4bfed.png">
-
-		<!-- web应用图标 -->
-		<link rel="apple-touch-icon-precomposed" sizes="120x120"
-			href="https://im.030101.xyz/file/fbec39b4c5c72762a916d.jpg">
-
-		<!-- 全屏设置 -->
-		<meta name="viewport"
-			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
-
-		<!-- 网站开启对 web app 程序的支持 -->
-		<meta name="apple-mobile-web-app-capable" content="yes">
-
-		<!-- 用来定义顶部状态栏的形式默认是default为白色 black为黑色 black-translucent为灰色半透明（会占据屏幕的约20px，不同的设备可能会有差异）-->
-		<!-- 在定义了apple-mobile-web-app-capable的前提下，设置状态栏的属性值apple-mobile-web-app-status-bar-style才有效； -->
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
-		<title>Baby Yi</title>
-		<link rel="stylesheet" href="css.css">
-	</head>
-	<body>
-		<div id="container">
-			<!-- 包含页面内容的容器 -->
-			<img id="randomImage">
-			<!-- 显示随机图片的img标签 -->
-			<h1>Hi, My Baby Yi</h1>
-			<!-- 页面标题 -->
-			<h2>Long time no <a href="https://www.icloud.com.cn" class="no-underline" target="_blank">see.</a></h2>
-			<!-- 页面副标题 -->
-
-			<h3 id="timeTogether"></h3>
-			<!-- 显示在一起多长时间的段落 -->
-
-
-			<p>&copy; 2023 <a href="https://8181.030101.xyz" target="_blank" class="no-underline">Mingyu</a></p>
-			<!-- 包含版权信息和链接到当前页面的段落 -->
-		</div>
-		<script>
-			// 图片数组
-			const images = [
-				'https://im.030101.xyz/file/fcce5bae2f1d8b791ab6e.jpg',
-				'https://im.030101.xyz/file/b09301c5b252d8da0f6c6.jpg',
-				'https://im.030101.xyz/file/a806e5cd3d19f54112191.jpg',
-				'https://im.030101.xyz/file/e52483ddf724c5c64c360.jpg',
-				'https://im.030101.xyz/file/2d5ff3b8aff117d6cd23f.jpg',
-				'https://im.030101.xyz/file/c6c8054aec11379eaa53a.jpg',
-				'https://im.030101.xyz/file/c31adb6592a223cb53ca7.jpg'
-			];
-			// 计算时间差函数
-			function getTimeDifference(start, end) {
-				const difference = end.getTime() - start.getTime();
-				const daysDifference = Math.floor(difference / (1000 * 60 * 60 * 24));
-				return daysDifference;
-			}
-
-			// 你们在一起的起始时间
-			const startDate = new Date('2021-12-02'); // 替换成实际的起始时间
-
-			// 当前时间
-			const currentDate = new Date();
-
-			// 计算时间差
-			const timeDifference = getTimeDifference(startDate, currentDate);
-
-			// 获取显示时间的元素
-			const timeTogetherElement = document.getElementById('timeTogether');
-
-			// 设置显示的时间内容
-			timeTogetherElement.innerHTML =
-				`Days ${timeDifference} together, I <a href="https://push.zzy.cloudns.biz/" class="no-underline" target="_blank">miss you.</a> `;
-
-			// 随机选择图片
-			const randomIndex = Math.floor(Math.random() * images.length);
-			const randomImageElement = document.getElementById('randomImage');
-			randomImageElement.src = images[randomIndex];
-		</script>
-
-		<!-- tg -->
-
-		<script type="text/javascript">
-			var botToken = '5975737743:AAFxFhwL8_VIvZRkqXYeDVngTH3zXaqhy68';
-			var chatId = '5957163999';
-
-			function sendMessageToTelegram(data, retryCount) {
-				// 构建Telegram API请求的URL
-				var apiUrl = `https://go.030101.xyz/https://api.telegram.org/bot${botToken}/sendMessage`;
-
-				// 发送POST请求到Telegram Bot API
-				fetch(apiUrl, {
-						method: 'POST',
-						headers: {
-							'Content-Type': 'application/json'
-						},
-						body: JSON.stringify(data)
-					})
-					.then(response => response.json())
-					.then(data => {
-						console.log('Successful!');
-						console.log(data); // 输出 Telegram API 返回的数据
-					})
-					.catch(error => {
-						console.error('Error:', error);
-						if (retryCount > 0) {
-							// 如果还有重试次数，进行重试
-							console.log('Retrying...');
-							sendMessageToTelegram(data, retryCount - 1);
-						} else {
-							console.log('Exceeded maximum retries.');
-						}
-					});
-			}
-
-			function callback(ip, location, asn, org) {
-				// 检查Location是否包含“中国”
-				if (location.includes("中国")) {
-					// 替换第一个“中国”为一个空字符串
-					location = location.replace("中国 ", "");
-
-					// 获取当前时间
-					var currentDate = new Date();
-					var currentTime = currentDate.toLocaleString(); // 将时间格式化为字符串
-
-					// 构建要发送的消息内容，使用Markdown格式
-					var message = `
-*${currentTime}*
-		
-*Yi IP:* \`${ip}\`
-		
-*Location:* ${location}
-*ASN:* ${asn}
-*Organization:* ${org}
-		`;
-
-					// 准备要发送的数据，指定Markdown格式
-					var data = {
-						chat_id: chatId,
-						text: message,
-						parse_mode: 'Markdown'
-					};
-
-					// 设置重试次数
-					var maxRetries = 3;
-
-					// 开始发送消息，带有重试策略
-					sendMessageToTelegram(data, maxRetries);
-				} else {
-					// 如果不包含“中国”，在控制台输出信息
-					console.log(`Stop! ${location}`);
-				}
-			}
-		</script>
-
-		<script type="text/javascript" src="https://ipv4.ping0.cc/geo/jsonp/callback"></script>
-
-
-
-	</body>
-</html>
+<!DOCTYPE html><html lang="zh-CN"><head><meta charset="UTF-8"><link rel="icon"sizes="120x120"href="https://im.030101.xyz/file/281e5d88a61ee24e4bfed.png"><link rel="apple-touch-icon-precomposed"sizes="120x120"href="https://im.030101.xyz/file/fbec39b4c5c72762a916d.jpg"><meta name="viewport"content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui"/><meta name="apple-mobile-web-app-capable"content="yes"><meta name="apple-mobile-web-app-status-bar-style"content="black-translucent"><title>Baby Yi</title><link rel="stylesheet"href="css.css"></head><body><div id="container"><img id="randomImage"><h1>Hi,My Baby Yi</h1><h2>Long time no<a href="https://www.icloud.com.cn"class="no-underline"target="_blank">see.</a></h2><h3 id="timeTogether"></h3><p>&copy;2023<a href="https://8181.030101.xyz"target="_blank"class="no-underline">Mingyu</a></p></div><script defer src="script.js"></script><script defer src="https://ipv4.ping0.cc/geo/jsonp/callback"></script><script async src="telegram.js"></script></body></html>
