--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-<!DOCTYPE html><html lang="zh-CN"><head><meta charset="UTF-8"><link rel="icon"sizes="120x120"href="https://im.030101.xyz/file/281e5d88a61ee24e4bfed.png"><link rel="apple-touch-icon-precomposed"sizes="120x120"href="https://im.030101.xyz/file/fbec39b4c5c72762a916d.jpg"><meta name="viewport"content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui"/><meta name="apple-mobile-web-app-capable"content="yes"><meta name="apple-mobile-web-app-status-bar-style"content="black-translucent"><title>Baby Yi</title><link rel="stylesheet"href="style.css"></head><body><div id="container"><img id="randomImage"><h1>Hi,My Baby Yi</h1><h2>Long time no<a href="https://www.icloud.com.cn"class="no-underline"target="_blank">see.</a></h2><h3 id="timeTogether"></h3><p>&copy;2023<a href="https://8181.030101.xyz"target="_blank"class="no-underline">Mingyu</a></p></div><script defer src="script.js"></script><script defer src="https://ipv4.ping0.cc/geo/jsonp/callback"></script><script async src="telegram.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Speed URL</title>
+  <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/png-dot/pngpng@main/20231120-233256-ajjzpm.png">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #F5F5F5;
+    }
+
+    a {
+      color: #9db4ff;
+      text-decoration: none; /* 去掉下划线 */
+    }
+
+    code {
+      background-color: #eee;
+      padding: 2px 5px;
+      border-radius: 3px;
+    }
+
+    p {
+      margin-bottom: 15px;
+    }
+
+    li {
+      margin-bottom: 5px;
+    }
+
+    /* 暗黑模式 */
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #333;
+        color: #f0f0f0;
+      }
+
+      code {
+        background-color: #444;
+        padding: 2px 5px;
+        border-radius: 3px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <!-- 页面内容 -->
+  <h1 style="font-size: 30px;">Download speed measurement URL for <span
+        style="text-decoration: underline; cursor: pointer;"
+        onclick="window.open('https://github.com/ymyuuu', '_blank')">Mingyu</span></h1>
+  <h2>Help Documents:</h2>
+  <p>若要指定字节数，请使用格式：<code>${url.origin}/数字</code></p>
+  <p>若要指定以千字节为单位，请使用格式：<code>${url.origin}/数字kb</code></p>
+  <p>若要指定以兆字节为单位，请使用格式：<code>${url.origin}/数字mb</code></p>
+  <p>若要指定以千兆字节为单位，请使用格式：<code>${url.origin}/数字gb</code></p>
+  <h3>示例：</h3>
+  <ul>
+    <li>要下载 10000 字节：<a href="${url.origin}/10000">${url.origin}/10000</a></li>
+    <li>要下载 10 千字节：<a href="${url.origin}/10kb">${url.origin}/10kb</a></li>
+    <li>要下载 5 兆字节：<a href="${url.origin}/5mb">${url.origin}/5mb</a></li>
+    <li>要下载 2 千兆字节：<a href="${url.origin}/2gb">${url.origin}/2gb</a></li>
+  </ul>
+  <p>在某些国家或地区，由于网络限制或连接限制，可能会影响下载速度或导致下载不稳定。特别地，在中国境内可能会遇到较慢的下载速度或无法连接到服务的情况。</p>
+  <p>如果您在国内使用时遇到问题，您可以尝试以下解决方案：</p>
+  <ul>
+    <li>使用 VPN 或代理，连接到其他国家的网络，然后再进行下载</li>
+    <li>考虑其他本地化的服务或下载方式，以获得更稳定和快速的下载体验</li>
+  </ul>
+  <h2 id="running-days">Website has been running stably for <span id="days-count"></span> days 🎉</h2> <!-- 修改成英文 -->
+
+  <script defer src="script.js"></script>
+</body>
+</html>
