--- a/index.html
+++ b/index.html
@@ -72,5 +72,6 @@
 				<li>考虑其他本地化的服务或下载方式，以获得更稳定和快速的下载体验</li>
 			</ul>
 			<h2>Website has been running stably for ${await calculateDaysRunning()} days 🎉</h2> <!-- 修改成英文 -->
+			<script defer src="index.js"></script>
 		</body>
 	</html>
